<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>XIAN_Bank</groupId>
    <artifactId>XIAN_Bank</artifactId>
    <version>1.0-SNAPSHOT</version>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <forkCount>1</forkCount>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                    <argLine>-Djava.awt.headless=true</argLine>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                    <!--<useSystemClassLoader>false</useSystemClassLoader>-->
                    <reuseForks>false</reuseForks>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>2.53.1</version>
        </dependency>

    <dependency>
        <groupId>info.cukes</groupId>
        <artifactId>jna-platform</artifactId>
        <version>1.2.4</version>
        <scope>system</scope>
        <systemPath>${project.basedir}/lib/jna.jar</systemPath>
    </dependency>

        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>jna-platform</artifactId>
            <version>1.2.4</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/jna-platform.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>RELEASE</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>RELEASE</version>
        </dependency>

    </dependencies>
</project>